<resources>
    <string name="app_name">Github</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="icon_empty">Icon Empty</string>
    <string name="empty_message">No User Favorite</string>
    <string name="empty_message_two">No Followers</string>
    <string name="empty_message_one">No Following</string>
    <string name="empty_message_three">No User Data </string>
    <string name="description_empty_message">Please Select Users Favorite</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="menu_setting">Menu Setting</string>
    <string name="image_location">Image Location</string>
    <string name="favorite">Favorite</string>
    <string name="image_home">Image Home</string>
    <string name="username">Username</string>
    <string name="repository">Repository</string>
    <string name="empty_message_internet">Please check your internet connection</string>
    <string name="likes">Likes</string>
    <string name="icon_back">Icon Back</string>
    <string name="icon_switch">Icon Switch</string>
    <string name="image_bio">image Bio Data</string>
    <string name="choose_language_menu">Choose Language</string>
    <string name="dark_daily_body">Hi, Enjoy dark mode or night mode as you like.</string>
    <string name="language">Language</string>
    <string name="description_choose_language">Please click to select the language you want</string>
    <string name="home">HOME</string>
    <string name="detail_profile_user">DETAIL PROFILE USER</string>
    <string name="favorite_user">FAVORITE USER</string>
    <string name="back">back</string>
    <string name="photo_profile_user">Foto Profil User</string>
    <string name="username_user">Username User</string>
    <string name="biodata_user">Biodata User</string>
    <string name="location_user">location user</string>
    <string name="click_to_like_or_un_like">Klik untuk Like atau Un Like</string>
    <string name="logout">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="enter_username">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="label_must_fill">Required</string>
    <string name="logging_in">Logging in…</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="registering">Registering...</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
</resources>