<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />

        <variable
            name="enableDarkMode"
            type="Boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundScreen"
        tools:context=".ui.activity.settings.SettingsActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/backgroundToolbar"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Setting"
            app:titleTextColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="end"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/dark_or_light_mode"/>

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:thumb="@drawable/ic_dark_mode"
                android:checked='@{enableDarkMode}'
                android:thumbTint="@color/thumbTintMoon"
                android:layout_gravity="end"
                android:track="@drawable/bg_switch_dark_mode"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="choose_language"
            android:padding="@dimen/_12sdp"
            android:text="@string/choose_language_menu"
            android:textAllCaps="true"
            android:textColor="@color/textColorEmpty"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="logout"
            android:padding="@dimen/_12sdp"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/textColorEmpty"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>